force-app/main/default/objects/Status_History__c/Status_History__c.object-meta.xml
<CustomObject>
    <description>Tracks status changes for grant applications (audit trail)</description>
    <label>Status History</label>
    <nameField>
        <displayFormat>SH-{0000}</displayFormat>
        <label>History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>