force-app/main/default/objects/Status_History__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>Parent grant application</description>
    <label>Application</label>
    <referenceTo>Grant_Application__c</referenceTo>
    <relationshipLabel>Status History</relationshipLabel>
    <relationshipName>Status_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>