force-app/main/default/objects/Status_History__c/fields/Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Changed_At__c</fullName>
    <description>When the status change occurred</description>
    <label>Changed At</label>
    <type>DateTime</type>
</CustomField>