force-app/main/default/objects/Status_History__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who made the status change</description>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Status_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>