force-app/main/default/objects/Status_History__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments about the status change</description>
    <label>Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>