force-app/main/default/objects/Status_History__c/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <description>New status value</description>
    <label>New Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>